2016-10-05  Zalan Bujtas  <zalan@apple.com>

        Missing quotation mark when <q> gets reparented.
        https://bugs.webkit.org/show_bug.cgi?id=162940

        Reviewed by Darin Adler.

        The position of the closing quotation mark is driven by the multicolumn code hence the cover div.

        * fast/css-generated-content/missing-quotes-with-dynamic-content-expected.html: Added.
        * fast/css-generated-content/missing-quotes-with-dynamic-content.html: Added.

2016-10-03  Brent Fulgham  <bfulgham@apple.com>

        Avoid null dereference when changing focus in design mode.
        https://bugs.webkit.org/show_bug.cgi?id=162877
        <rdar://problem/28061261>

        Reviewed by Chris Dumez.

        * fast/frames/iframe-focus-crash-expected.txt: Added.
        * fast/frames/iframe-focus-crash.html: Added.
        * fast/frames/resources/iframe-focus-crash.html: Added.

2016-10-01  Simon Fraser  <simon.fraser@apple.com>

        Bad cast when CSS position programmatically changed from -webkit-sticky to fixed
        https://bugs.webkit.org/show_bug.cgi?id=160826

        Reviewed by Zalan Bujtas.

        * fast/scrolling/sticky-to-fixed-expected.txt: Added.
        * fast/scrolling/sticky-to-fixed.html: Added.

2016-09-29  Simon Fraser  <simon.fraser@apple.com>

        Fix hit testing on display:block <svg> elements
        https://bugs.webkit.org/show_bug.cgi?id=162717
        rdar://problem/23261130

        Reviewed by Zalan Bujtas.
        
        Test hit testing on inline and block <svg> elements.

        * svg/hittest/block-svg-expected.txt: Added.
        * svg/hittest/block-svg.html: Added.

2016-09-27  Ryosuke Niwa  <rniwa@webkit.org>

        Toggling display: none on a parent element of a slot which shares style with its parent doesn't update the slot's visibility
        https://bugs.webkit.org/show_bug.cgi?id=158421

        Reviewed by Darin Adler.

        Add a regression test now that the bug has been fixed by r206403.
