@@ -12,12 +12,12 @@ response source: Disk cache after validation
 --------Testing loads through memory cache (XHR behavior)--------
 response headers: {"Expires":"now(0)","ETag":"match"}
 response's 'Expires' header is overriden by future date in 304 response
-response source: Memory cache after validation
+response source: Memory cache
 
 --------Testing loads through memory cache (subresource behavior)--------
 response headers: {"Expires":"now(0)","ETag":"match"}
 response's 'Expires' header is overriden by future date in 304 response
-response source: Memory cache after validation
+response source: Memory cache
 
 304 response included an 'Expires' header in the future, so we should not need to revalidate this time.
 --------Testing loads from disk cache--------
