@@ -1,3 +1,12 @@
+2016-10-06  Youenn Fablet  <youenn@apple.com>
+
+        [WK2] 304 revalidation on the network process does not update the validated response
+        https://bugs.webkit.org/show_bug.cgi?id=162973
+
+        Reviewed by Darin Adler.
+
+        * NetworkProcess/NetworkResourceLoader.cpp: Updating cache entry with the revalidated one.
+
 2016-10-06  Michael Catanzaro  <mcatanzaro@igalia.com>
 
         [GTK] Expose WebKitDOMHTMLInputElement APIs for form autofill
